# boilerplate-python-http-api

./: .gitignore  app.py  app_debug.py  app_deployed.py  package-lock.json  package.json  pyproject.toml  serverless.yml
api_default_mocks/: mock_dynamo_not_found_500.json
sls_manifests/: lambdas.yml  py_requirements.yml  resources.yml
src/: __init__.py
src/core/: config.py  custom_logger.py  fields.py  json_serializer.py  openapi_mods.py  pre_after_requests.py  response_models.py  swagger_utils.py  utils.py
src/v1/misc/: health_check.py
